tests/errors/continue_outside_loop_nested_if.py
# expect_error: SyntaxError
if True:
    if True:
        continue